--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.c1{
+	width: 100;
+}
+
+.c2{
+	width: 600px;
+}
+
+img{
+	width: 200px;
+}
+
+td, table{
+	border: 2px solid green;
+}
